# for display continuity sake please use 2 spaces instead of tabs, also make  #
# sure that lines break at 80 chars for constricted dispaly situations        #

2015-12-18 bertazza
  * Raster symbologies now saved in and restored from project file

2015-12-15 ede
  * added icons to the datastore query chooser's combobox
  * "static"alized a part of ConnectionManagerPanel w/o redesign consequences

2015-12-11 ede
  * move WFS language files to language/wfs/
  * added I18N support for giving a plain path as "category"

2015-12-11 Nicolas Ribot <nicolas.ribot@gmail.com>
  * Spatial Databases support enhanced: support for Oracle Spatial, 
    MySQL/MariaDB, Spatialite added.
  * FilterQuery and Adhoc queries supported for these databases
  * Error detection in case of bad WHERE clause detected when loading a layer
    (layer removed from Panel)
  * New connection icons according to database type
  * Oracle Spatial: reads SDO_GEOMETRY with geotools code
                    reflection used on com.oracle.* methods to avoid jar dependence
                    (ede code)
  * MariaDB: supports WKB and natives binary types, thanks to code from Larry Reeder
  * Spatialite: supports Spatialite binary type, WKB and WKT.
                supports several geometry_column metadata table layout (code from 
    Larry Reeder DB Plugin)

2015-12-11 mmichaud <m.michael.michaud@orange.fr>
  * Switch pom to official jts-1.14 release

2015-12-10
  * Fixed bug in GridFloat class: now channels and streams are closed 
    after writing of grid is completed.

2015-12-08 ede
  * bugfix "renaming layers or editing attributes in attribtab executes 
    plugin/cursortool erronously via shortcut" 
    and 
    bugfix #366 "Copy/paste not working in LayerNamePanel"
  * bugfix #403 "Make layer editable from AttributeTable..."
  * moved editable, selectable, readonly attributes into (Abstract)Layerable
    in order for Layerables to be editable etc. in the future
